# data-getta

./: .gitignore  README.md  cron-script.sh  docker-compose.local.yaml
.github/workflows/: pages.yml
csvparser/: requirements.txt
csvparser/include/: config_original.yaml  db_files.txt
csvparser/src/: csv_log_2025-09-02.txt  ftpPuller.py
scripts/: README.md  process_all_data.py  pull_all_trackman_csv.py  pyproject.toml  update_batters_table.py  update_pitchers_table.py  update_pitches_table.py  update_players_table.py
ui/: README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: ConferenceTable.tsx  DesktopSideBar.tsx  MobileSideBar.tsx  SideBar.tsx  TabGroup.tsx  Tabs.tsx  TopBar.tsx
ui/src/components/team/: BatterTable.tsx  PitchSumsTable.tsx  PitcherTable.tsx  RosterTable.tsx  TableSkeleton.tsx  TableTabs.tsx  TeamInfo.tsx
ui/src/layouts/: AppLayout.tsx
ui/src/pages/: BatterTab.tsx  ConferencePage.tsx  LandingPage.tsx  PitcherTab.tsx  PlayerPage.tsx  RosterTab.tsx  TeamPage.tsx
ui/src/types/: schemas.ts  types.ts
ui/src/utils/: Link.tsx  replacer.ts  supabase.ts  theme.ts
