[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["jmurrah <jacobhmurrah@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.1.1"
supabase = "^2.18.1"
pandas = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
